--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yapper</title>
+    <meta name="description" content="Yapper - A playful social media frontend built with Tailwind CSS. Create posts, like posts, view user profiles, and enjoy a minimal responsive design." />
     <link rel="stylesheet" href="./css/style.css" />
 </head>
 
