--- a/profile/index.html
+++ b/profile/index.html
@@ -14,13 +14,13 @@
         <a href="/" class="text-xl font-bold text-yellow-400">Yapper</a>
 
         <nav class="hidden md:flex space-x-6 text-sm">
-            <a href="/feed/index.html" class="text-yellow-300 hover:text-gray-300 font-medium">Feed</a>
-            <a href="/profile/index.html" class="text-yellow-300 hover:text-gray-300 font-medium">Profile</a>
+            <a href="/feed" class="text-yellow-300 hover:text-gray-300 font-medium">Feed</a>
+            <a href="/profile" class="text-yellow-300 hover:text-gray-300 font-medium">Profile</a>
             <a href="/" class="text-yellow-300 hover:text-red-500 font-medium">Logout</a>
         </nav>
 
         <details class="md:hidden relative">
-            <summary class="cursor-pointer p-2 rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
+            <summary class="cursor-pointer p-2 rounded focus:outline-none focus:ring-2 focus:ring-blue-500 list-none">
                 <svg class="w-6 h-6 text-gray-700" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                     xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16">
@@ -28,8 +28,8 @@
                 </svg>
             </summary>
             <div class="absolute right-0 mt-2 w-40 bg-gray-900 border rounded shadow-md py-2 z-10">
-                <a href="/feed/index.html" class="block text-yellow-300 px-4 py-2 hover:bg-gray-100 text-sm">Feed</a>
-                <a href="/profile/index.html" class="block text-yellow-300 px-4 py-2 hover:bg-gray-100 text-sm">Profile</a>
+                <a href="/feed" class="block text-yellow-300 px-4 py-2 hover:bg-gray-100 text-sm text-black">Feed</a>
+                <a href="/profile" class="block text-yellow-300 px-4 py-2 hover:bg-gray-100 text-sm text-black">Profile</a>
                 <a href="/" class="block text-yellow-300 px-4 py-2 hover:bg-gray-100 text-sm text-red-500">Logout</a>
             </div>
         </details>
